2008-04-24  Glenn Morris  <rgm@gnu.org>

	* net/goto-addr.el (goto-address-prog-mode):
	* progmodes/bug-reference.el (bug-reference-prog-mode):
	Define for compiler.

	* minibuffer.el (x-file-dialog): Declare as function.

	* progmodes/vhdl-mode.el (vhdl-speedbar-find-file): Use
	dframe-update-speed rather than obsolete alias speedbar-update-speed.

	* calendar/cal-menu.el (cal-menu-diary-menu): Fix typo.
	(cal-menu-scroll-menu): Use commands rather than key macros, which don't
	work with easymenu.  Add :keys where needed.

	* calendar/cal-move.el (calendar-scroll-left): Handle case when
	event-start is nil.

	* calendar/calendar.el (calendar-mode-map): Fix typo.

2008-04-24  Tom Tromey  <tromey@redhat.com>

	* emacs-lisp/easy-mmode.el (easy-mmode-define-keymap): Document
	keywords.  Add :suppress.
	* pcvs-defs.el (cvs-mode-map): Use :suppress.

	* net/goto-addr.el (goto-address-unfontify): New function.
	(goto-address-fontify): Use it.	 Respect goto-address-prog-mode.
	(goto-address-fontify-region, goto-address-mode)
	(goto-address-prog-mode): New functions.

	* progmodes/bug-reference.el: New file.

2008-04-24  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-ts-active-input-buf): Move defvar to macterm.c.

2008-04-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easymenu.el (easy-menu-make-symbol): Don't wrap keyboard
	macros within lambdas.

2008-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-try-completion): Add `point' argument.
	Change return value.
	(completion-all-completions): Add `point' argument.
	(minibuffer-completion-help): Pass the new `point' argument.
	(completion--do-completion): Pass the whole field to try-completion.
	(completion--try-word-completion): Rewrite, making fewer assumptions.
	(completion-emacs21-try-completion, completion-emacs21-all-completions)
	(completion-emacs22-try-completion, completion-emacs22-all-completions)